...
                                <rect key="frame" x="130" y="392" width="114" height="40"/>
                                <color key="backgroundColor" red="0.76078431369999999" green="0.76078431369999999" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="70Z-mE-pGT"/>
                                    <constraint firstAttribute="width" constant="114" id="7E8-Vf-QBN"/>
                                </constraints>
                                <state key="normal" title="SecondVC"/>
                                <connections>
                                    <action selector="onBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Aj5-YM-nka"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.0039215686269999999" green="0.81568627449999997" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
...
